--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ font-family: 'Josefin Sans', sans-serif;
 header{
  width: 100%;
  height: 100vh;
- background-image: linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,0.9)) ,url('resources/img/bg.jpg');
+ background-image: linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,0.9)) ,url('bg.jpg');
  background-size: cover;
  background-repeat: no-repeat;
  background-size: 100% 100%;
